@startuml

title __JOB's Class Diagram__\n

  namespace tech.eportfolio.server {
    namespace job {
      class tech.eportfolio.server.job.DeleteUserContainerJob {
          - logger : Logger
          + execute()
          - deleteUserContainerTask()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace job {
      class tech.eportfolio.server.job.MockContentJob {
          {static} - THRESHOLD : int
          - logger : Logger
          + execute()
          - assignTag()
          - createPortfolio()
          - createTag()
          - createUser()
      }
    }
  }
  

  tech.eportfolio.server.job.DeleteUserContainerJob .up.|> org.quartz.Job
  tech.eportfolio.server.job.DeleteUserContainerJob o-- tech.eportfolio.server.service.AzureStorageService : azureStorageService
  tech.eportfolio.server.job.DeleteUserContainerJob o-- tech.eportfolio.server.service.UserService : userService
  tech.eportfolio.server.job.MockContentJob .up.|> org.quartz.Job
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.service.AzureStorageService : azureStorageService
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.common.utility.JWTTokenProvider : jwtTokenProvider
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.service.PortfolioService : portfolioService
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.service.TagService : tagService
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.common.unsplash.Client : unsplashClient
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.repository.UserRepository : userRepository
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.service.UserService : userService
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.service.UserTagService : userTagService
  tech.eportfolio.server.job.MockContentJob o-- tech.eportfolio.server.service.VerificationService : verificationService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
